# distributional-superiority

./: .dockerignore  .envrc  .gitignore  LICENSE  README.md  download_data.sh  justfile  pyproject.toml
config/: envs.py  fiddlers.py  sweeps.py
config/agents/: dau.py  dqn.py  dsup.py  qrdqn.py
dsup/: __main__.py  auto_sweep.py  configs.py  losses.py  models.py  replay.py  statistical_functionals.py  tags.py  testbed.py  train_state.py  trainer.py  types.py
dsup/agents/: dau.py  dqn.py  dsup.py  qrdqn.py
dsup/envs/: cartpole.py  continuous_time_env.py  lim_malek.py
dsup/utils/: functions.py  jitpp.py  metrics.py  printing.py  schedules.py  stochastic_process.py
dsup/utils/metric_writers/: aim_writer.py  comet_writer.py
dsup/utils/plotting/: plot_return_dists.py
tests/: test_risk_measure.py  test_stateless_env.py
